--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "astro-pagefind": "^1.8.3",
     "astro-seo": "^0.8.4",
     "badge-maker": "^4.1.0",
+    "browserslist": "^4.25.0",
     "dayjs": "^1.11.13",
     "feather-icons": "^4.29.2",
     "gray-matter": "^4.0.3",
